# MMTPA_adapter

./: .gitignore  .helmignore  Chart.yaml  Dockerfile  Jenkinsfile  pyproject.toml  start.sh  values.yaml
mmtpa_adapter/: ServiceAccountCredentials.py  __init__.py
templates/: _helpers.tpl  deployment.yaml  service.yaml
tests/: test_mmtpa_adapter.py
